force-app/main/default/objects/TestRunCase__c/TestRunCase__c.object-meta.xml
<CustomObject>
    <label>Test Run Case</label>
    <nameField>
        <displayFormat>RUN-CASE-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Run Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>