force-app/main/default/objects/TestRunCase__c/fields/RunOrder__c.field-meta.xml
<CustomField>
    <fullName>RunOrder__c</fullName>
    <label>Run Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>