force-app/main/default/objects/TestRunCase__c/fields/TestCase__c.field-meta.xml
<CustomField>
    <fullName>TestCase__c</fullName>
    <label>Test Case</label>
    <referenceTo>TestCase__c</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>TestRunCases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>