force-app/main/default/objects/TestRunCase__c/fields/TestRun__c.field-meta.xml
<CustomField>
    <fullName>TestRun__c</fullName>
    <label>Test Run</label>
    <referenceTo>TestRun__c</referenceTo>
    <relationshipLabel>Test Cases</relationshipLabel>
    <relationshipName>TestRunCases</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>